<resources>
    <string name="app_name">MikeTeaManage</string>
    <string name="warring">警告</string>
    <string name="warring_conent">如非管理人员，请勿进行操作</string>
    <string name="warring_input_hint">请输入管理密码</string>
    <string name="waarring_input_prefill"></string>
    <string name="define">确定</string>
    <string name="cancel">取消</string>
    <string name="wrong_password">密码错误</string>
    <string name="setting">设置</string>
    <string name="device_content">设备内容</string>
    <string name="device_id">设备ID</string>
    <string name="equipment_number">设置设备编号</string>
    <string name="Startup_Parameters">启动参数</string>
    <string name="startup_temperature">制冷启动温度</string>
    <string name="stopping_temperature">制冷停止温度</string>
    <string name="start_cooling">启动制冷</string>
    <string name="cleaning_speed">清洗速度</string>
    <string name="discharge_speed">出料速度</string>
    <string name="other">其它</string>
    <string name="modify_admin_password">更改管理员密码</string>
    <string name="modify_pin_password">更改锁屏密码</string>
    <string name="products_a_set">产品一设置</string>
    <string name="products_b_set">产品二设置</string>
    <string name="cleaning_module">清洗模块</string>
    <string name="open_debug">打开调试</string>
    <string name="exit_app">退出APP</string>
    <string name="please_enter_content">请输入内容</string>
    <string name="set_cooling_start_temperature">设置制冷启动温度（0-100）</string>
    <string name="set_cooling_stop_temperature">设置制冷停止温度（0-100）</string>
    <string name="enter_number_hint">请输入数字，小数保留1位</string>
    <string name="set_cleaning_speed">设置清洗速度（0-30）</string>
    <string name="set_discharge_speed">设置出料速度（0-30）</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="define_modify">确认修改</string>
    <string name="please_enter_current_password_first">请先输入当前密码</string>
    <string name="please_enter_new_password_first">请先输入新密码</string>
    <string name="please_enter_confirm_password_first">请先输入确认密码</string>
    <string name="err_new_password">两次输入的新密码不一致</string>
    <string name="err_password">密码错误</string>
    <string name="current_password">&#12288;当前密码</string>
    <string name="new_password">&#12288;&#12288;新密码</string>
    <string name="confirm_password">确认新密码</string>
    <string name="please_confirm_password">请确认密码</string>
    <string name="please_enter_new_password">请输入新密码</string>
    <string name="unset">未设置</string>
    <string name="open">开启</string>
    <string name="current_name">当前产品名称</string>
    <string name="current_product_img">当前产品图&#12288;</string>
    <string name="capacity_a">第一缸容量&#12288;</string>
    <string name="capacity_b">第二缸容量&#12288;</string>
    <string name="capacity_c">第三缸容量&#12288;</string>
    <string name="capacity_d">第四缸容量&#12288;</string>
    <string name="water_pump_capacity">水泵容量&#12288;&#12288;</string>
    <string name="please_enter_number_a_capacity">请输入第一缸容量（0-1000）</string>
    <string name="please_enter_number_b_capacity">请输入第二缸容量（0-1000）</string>
    <string name="please_enter_number_c_capacity">请输入第三缸容量（0-1000）</string>
    <string name="please_enter_number_d_capacity">请输入第四缸容量（0-1000）</string>
    <string name="please_enter_water_pump_capacity">请输入水泵容量（0-1000）</string>
    <string name="save">保存</string>
    <string name="please_enter_product_name">请输入产品名称</string>
    <string name="set_product">设置产品</string>
    <string name="incomplete_filling">填写不全</string>
    <string name="all_clean">全部清洗（不包括水泵）</string>
    <string name="clean_a">清洗第一缸</string>
    <string name="clean_b">清洗第二缸</string>
    <string name="clean_c">清洗第三缸</string>
    <string name="clean_d">清洗第四缸</string>
    <string name="clean_water_pump">清洗第四缸</string>
    <string name="clean">清洗</string>
    <string name="the_maximum_value_that_can_be_entered_is_100">可输入的最大值为100</string>
    <string name="only_one_decimal_place_is_allowed">小数位最多只能有一位</string>
    <string name="check_update">检查更新</string>
    <string name="click_screen_back">点击屏幕返回</string>
    <string name="please_unlock_first">请先解锁</string>
    <string name="err_max_length">不能超过%1$s个字符</string>
    <string name="products_c_set">产品三设置</string>
    <string name="products_d_set">产品四设置</string>
    <string name="modify_successfully">修改成功</string>
    <string name="product_list">产品列表</string>
    <string name="save_successfully">保存成功</string>
    <string name="temperature_">%1$s&#8451;</string>
    <string name="err_speed">格式不正确，请重新输入</string>
    <string name="device_yichang">设备异常</string>
    <string name="text_color_set">字体颜色配置</string>
    <string name="current_temp">当前温度：</string>
    <string name="sheshidu"><![CDATA[&#8451;]]></string>
</resources>