<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ProductSetupActivity">

    <include layout="@layout/top_view" />

    <include layout="@layout/dividing_line" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:id="@+id/rl_cb"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/cb_open"
                    android:clickable="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/product_setup_paddingEnd"
                    android:text="@string/current_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium" />

                <EditText
                    android:id="@+id/edt_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:hint="@string/please_enter_product_name"
                    android:lines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/product_setup_paddingEnd"
                    android:text="@string/current_product_img"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium" />

                <ImageView
                    android:id="@+id/iv_bg"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_add" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/product_setup_paddingEnd"
                    android:text="@string/capacity_a"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium" />

                <EditText
                    android:id="@+id/edt_capacity_a"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:hint="@string/please_enter_number_a_capacity"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLength="4"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/product_setup_paddingEnd"
                    android:text="@string/capacity_b"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium" />

                <EditText
                    android:id="@+id/edt_capacity_b"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:hint="@string/please_enter_number_b_capacity"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLength="4"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/product_setup_paddingEnd"
                    android:text="@string/capacity_c"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium" />

                <EditText
                    android:id="@+id/edt_capacity_c"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:hint="@string/please_enter_number_c_capacity"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLength="4"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/product_setup_paddingEnd"
                    android:text="@string/capacity_d"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium" />

                <EditText
                    android:id="@+id/edt_capacity_d"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:hint="@string/please_enter_number_d_capacity"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLength="4"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/product_setup_paddingEnd"
                    android:text="@string/water_pump_capacity"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium" />

                <EditText
                    android:id="@+id/edt_water_pump_capacity"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:hint="@string/please_enter_water_pump_capacity"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLength="4"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_normal" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_modify"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="30dp"
                android:background="@drawable/btn_bg"
                android:text="@string/save"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>