<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/topview"
        layout="@layout/top_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include layout="@layout/dividing_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <include layout="@layout/dividing_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_password"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal" />

            <ImageView
                android:layout_width="1px"
                android:layout_height="10dp"
                android:layout_margin="10dp"
                android:background="@color/div_color" />

            <EditText
                android:id="@+id/edt_pwd_old"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:hint="@string/please_enter_password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="8"
                android:singleLine="true"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>

        <include layout="@layout/dividing_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal" />

            <ImageView
                android:layout_width="1px"
                android:layout_height="10dp"
                android:layout_margin="10dp"
                android:background="@color/div_color" />

            <EditText
                android:id="@+id/edt_pwd_new"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:hint="@string/please_enter_new_password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="8"
                android:singleLine="true"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>

        <include layout="@layout/dividing_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal" />

            <ImageView
                android:layout_width="1px"
                android:layout_height="10dp"
                android:layout_margin="10dp"
                android:background="@color/div_color" />

            <EditText
                android:id="@+id/edt_pwd_confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:hint="@string/please_confirm_password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="8"
                android:singleLine="true"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>

        <include layout="@layout/dividing_line" />

        <Button
            android:id="@+id/btn_modify"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="30dp"
            android:background="@drawable/btn_bg"
            android:text="@string/define_modify"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>