<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ProductSetupActivity">

    <include layout="@layout/top_view" />

    <include layout="@layout/dividing_line" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:id="@+id/rl_cb_all"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_clean"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/cb_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:clickable="false" />
            </RelativeLayout>

            <include layout="@layout/dividing_line" />

            <RelativeLayout
                android:id="@+id/rl_cb_a"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clean_a"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/cb_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:clickable="false" />
            </RelativeLayout>

            <include layout="@layout/dividing_line" />

            <RelativeLayout
                android:id="@+id/rl_cb_b"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clean_b"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/cb_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:clickable="false" />
            </RelativeLayout>

            <include layout="@layout/dividing_line" />

            <RelativeLayout
                android:id="@+id/rl_cb_c"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clean_c"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/cb_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:clickable="false" />
            </RelativeLayout>

            <include layout="@layout/dividing_line" />

            <RelativeLayout
                android:id="@+id/rl_cb_d"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clean_d"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/cb_d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:clickable="false" />
            </RelativeLayout>

            <include layout="@layout/dividing_line" />

            <RelativeLayout
                android:id="@+id/rl_cb_water_pump"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clean_water_pump"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/cb_water_pump"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:clickable="false" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>